antlr/QconParser.py
# Generated from Qcon.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class QconParser ( Parser ):

    grammarFileName = "Qcon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [  ]

    symbolicNames = [ "<INVALID>", "FEEDBACKMARKER", "TYPE", "TITLE", "POINT", 
                      "QUESTION_PREFIX", "LIST_PREFIX", "ALL_CHARACTER", 
                      "RIGHT_ANSWER_AFTER", "RIGHT_ANSWER_BEFORE" ]

    RULE_qcon = 0
    RULE_question = 1
    RULE_questionbody = 2
    RULE_questiontype = 3
    RULE_title = 4
    RULE_point = 5
    RULE_content = 6
    RULE_answerlist = 7
    RULE_listitem = 8
    RULE_answeritem = 9
    RULE_questionprefix = 10
    RULE_listprefix = 11
    RULE_answerprefix = 12
    RULE_feedback = 13

    ruleNames =  [ "qcon", "question", "questionbody", "questiontype", "title", 
                   "point", "content", "answerlist", "listitem", "answeritem", 
                   "questionprefix", "listprefix", "answerprefix", "feedback" ]

    EOF = Token.EOF
    FEEDBACKMARKER=1
    TYPE=2
    TITLE=3
    POINT=4
    QUESTION_PREFIX=5
    LIST_PREFIX=6
    ALL_CHARACTER=7
    RIGHT_ANSWER_AFTER=8
    RIGHT_ANSWER_BEFORE=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QconContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(QconParser.EOF, 0)

        def question(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QconParser.QuestionContext)
            else:
                return self.getTypedRuleContext(QconParser.QuestionContext,i)


        def getRuleIndex(self):
            return QconParser.RULE_qcon

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQcon" ):
                listener.enterQcon(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQcon" ):
                listener.exitQcon(self)




    def qcon(self):

        localctx = QconParser.QconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_qcon)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << QconParser.TYPE) | (1 << QconParser.TITLE) | (1 << QconParser.POINT) | (1 << QconParser.QUESTION_PREFIX))) != 0):
                self.state = 28
                self.question()
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(QconParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuestionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def questionbody(self):
            return self.getTypedRuleContext(QconParser.QuestionbodyContext,0)


        def answerlist(self):
            return self.getTypedRuleContext(QconParser.AnswerlistContext,0)


        def feedback(self):
            return self.getTypedRuleContext(QconParser.FeedbackContext,0)


        def getRuleIndex(self):
            return QconParser.RULE_question

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestion" ):
                listener.enterQuestion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestion" ):
                listener.exitQuestion(self)




    def question(self):

        localctx = QconParser.QuestionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_question)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.questionbody()
            self.state = 37
            self.answerlist()
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==QconParser.FEEDBACKMARKER:
                self.state = 38
                self.feedback()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuestionbodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def questionprefix(self):
            return self.getTypedRuleContext(QconParser.QuestionprefixContext,0)


        def content(self):
            return self.getTypedRuleContext(QconParser.ContentContext,0)


        def feedback(self):
            return self.getTypedRuleContext(QconParser.FeedbackContext,0)


        def questiontype(self):
            return self.getTypedRuleContext(QconParser.QuestiontypeContext,0)


        def title(self):
            return self.getTypedRuleContext(QconParser.TitleContext,0)


        def point(self):
            return self.getTypedRuleContext(QconParser.PointContext,0)


        def getRuleIndex(self):
            return QconParser.RULE_questionbody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestionbody" ):
                listener.enterQuestionbody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestionbody" ):
                listener.exitQuestionbody(self)




    def questionbody(self):

        localctx = QconParser.QuestionbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_questionbody)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,27,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.questionprefix()
                self.state = 42
                self.content()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 43
                    self.feedback()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TYPE:
                    self.state = 46
                    self.questiontype()


                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TITLE:
                    self.state = 49
                    self.title()


                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.POINT:
                    self.state = 52
                    self.point()


                self.state = 55
                self.questionprefix()
                self.state = 56
                self.content()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 57
                    self.feedback()


                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TYPE:
                    self.state = 60
                    self.questiontype()


                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.POINT:
                    self.state = 63
                    self.point()


                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TITLE:
                    self.state = 66
                    self.title()


                self.state = 69
                self.questionprefix()
                self.state = 70
                self.content()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 71
                    self.feedback()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TITLE:
                    self.state = 74
                    self.title()


                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TYPE:
                    self.state = 77
                    self.questiontype()


                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.POINT:
                    self.state = 80
                    self.point()


                self.state = 83
                self.questionprefix()
                self.state = 84
                self.content()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 85
                    self.feedback()


                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TITLE:
                    self.state = 88
                    self.title()


                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.POINT:
                    self.state = 91
                    self.point()


                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TYPE:
                    self.state = 94
                    self.questiontype()


                self.state = 97
                self.questionprefix()
                self.state = 98
                self.content()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 99
                    self.feedback()


                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.POINT:
                    self.state = 102
                    self.point()


                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TYPE:
                    self.state = 105
                    self.questiontype()


                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TITLE:
                    self.state = 108
                    self.title()


                self.state = 111
                self.questionprefix()
                self.state = 112
                self.content()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 113
                    self.feedback()


                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.POINT:
                    self.state = 116
                    self.point()


                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TITLE:
                    self.state = 119
                    self.title()


                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.TYPE:
                    self.state = 122
                    self.questiontype()


                self.state = 125
                self.questionprefix()
                self.state = 126
                self.content()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==QconParser.FEEDBACKMARKER:
                    self.state = 127
                    self.feedback()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuestiontypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(QconParser.TYPE, 0)

        def getRuleIndex(self):
            return QconParser.RULE_questiontype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestiontype" ):
                listener.enterQuestiontype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestiontype" ):
                listener.exitQuestiontype(self)




    def questiontype(self):

        localctx = QconParser.QuestiontypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_questiontype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(QconParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TitleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TITLE(self):
            return self.getToken(QconParser.TITLE, 0)

        def getRuleIndex(self):
            return QconParser.RULE_title

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTitle" ):
                listener.enterTitle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTitle" ):
                listener.exitTitle(self)




    def title(self):

        localctx = QconParser.TitleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_title)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(QconParser.TITLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PointContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def POINT(self):
            return self.getToken(QconParser.POINT, 0)

        def getRuleIndex(self):
            return QconParser.RULE_point

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPoint" ):
                listener.enterPoint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPoint" ):
                listener.exitPoint(self)




    def point(self):

        localctx = QconParser.PointContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_point)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(QconParser.POINT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALL_CHARACTER(self, i:int=None):
            if i is None:
                return self.getTokens(QconParser.ALL_CHARACTER)
            else:
                return self.getToken(QconParser.ALL_CHARACTER, i)

        def getRuleIndex(self):
            return QconParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)




    def content(self):

        localctx = QconParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 138
                self.match(QconParser.ALL_CHARACTER)
                self.state = 141 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==QconParser.ALL_CHARACTER):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnswerlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listitem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QconParser.ListitemContext)
            else:
                return self.getTypedRuleContext(QconParser.ListitemContext,i)


        def answeritem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QconParser.AnsweritemContext)
            else:
                return self.getTypedRuleContext(QconParser.AnsweritemContext,i)


        def answerlist(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QconParser.AnswerlistContext)
            else:
                return self.getTypedRuleContext(QconParser.AnswerlistContext,i)


        def getRuleIndex(self):
            return QconParser.RULE_answerlist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnswerlist" ):
                listener.enterAnswerlist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnswerlist" ):
                listener.exitAnswerlist(self)




    def answerlist(self):

        localctx = QconParser.AnswerlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_answerlist)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 145
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [QconParser.LIST_PREFIX]:
                        self.state = 143
                        self.listitem()
                        pass
                    elif token in [QconParser.RIGHT_ANSWER_AFTER, QconParser.RIGHT_ANSWER_BEFORE]:
                        self.state = 144
                        self.answeritem()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 147 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,30,self._ctx)

            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,32,self._ctx)
            if la_ == 1:
                self.state = 150 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 149
                        self.answerlist()

                    else:
                        raise NoViableAltException(self)
                    self.state = 152 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,31,self._ctx)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListitemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listprefix(self):
            return self.getTypedRuleContext(QconParser.ListprefixContext,0)


        def content(self):
            return self.getTypedRuleContext(QconParser.ContentContext,0)


        def feedback(self):
            return self.getTypedRuleContext(QconParser.FeedbackContext,0)


        def getRuleIndex(self):
            return QconParser.RULE_listitem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListitem" ):
                listener.enterListitem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListitem" ):
                listener.exitListitem(self)




    def listitem(self):

        localctx = QconParser.ListitemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listitem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.listprefix()
            self.state = 157
            self.content()
            self.state = 159
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,33,self._ctx)
            if la_ == 1:
                self.state = 158
                self.feedback()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnsweritemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def answerprefix(self):
            return self.getTypedRuleContext(QconParser.AnswerprefixContext,0)


        def content(self):
            return self.getTypedRuleContext(QconParser.ContentContext,0)


        def feedback(self):
            return self.getTypedRuleContext(QconParser.FeedbackContext,0)


        def getRuleIndex(self):
            return QconParser.RULE_answeritem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnsweritem" ):
                listener.enterAnsweritem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnsweritem" ):
                listener.exitAnsweritem(self)




    def answeritem(self):

        localctx = QconParser.AnsweritemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_answeritem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.answerprefix()
            self.state = 162
            self.content()
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,34,self._ctx)
            if la_ == 1:
                self.state = 163
                self.feedback()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuestionprefixContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUESTION_PREFIX(self):
            return self.getToken(QconParser.QUESTION_PREFIX, 0)

        def getRuleIndex(self):
            return QconParser.RULE_questionprefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuestionprefix" ):
                listener.enterQuestionprefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuestionprefix" ):
                listener.exitQuestionprefix(self)




    def questionprefix(self):

        localctx = QconParser.QuestionprefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_questionprefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(QconParser.QUESTION_PREFIX)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListprefixContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIST_PREFIX(self):
            return self.getToken(QconParser.LIST_PREFIX, 0)

        def getRuleIndex(self):
            return QconParser.RULE_listprefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListprefix" ):
                listener.enterListprefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListprefix" ):
                listener.exitListprefix(self)




    def listprefix(self):

        localctx = QconParser.ListprefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_listprefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(QconParser.LIST_PREFIX)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnswerprefixContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RIGHT_ANSWER_AFTER(self):
            return self.getToken(QconParser.RIGHT_ANSWER_AFTER, 0)

        def RIGHT_ANSWER_BEFORE(self):
            return self.getToken(QconParser.RIGHT_ANSWER_BEFORE, 0)

        def getRuleIndex(self):
            return QconParser.RULE_answerprefix

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnswerprefix" ):
                listener.enterAnswerprefix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnswerprefix" ):
                listener.exitAnswerprefix(self)




    def answerprefix(self):

        localctx = QconParser.AnswerprefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_answerprefix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            _la = self._input.LA(1)
            if not(_la==QconParser.RIGHT_ANSWER_AFTER or _la==QconParser.RIGHT_ANSWER_BEFORE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeedbackContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FEEDBACKMARKER(self):
            return self.getToken(QconParser.FEEDBACKMARKER, 0)

        def content(self):
            return self.getTypedRuleContext(QconParser.ContentContext,0)


        def getRuleIndex(self):
            return QconParser.RULE_feedback

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeedback" ):
                listener.enterFeedback(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeedback" ):
                listener.exitFeedback(self)




    def feedback(self):

        localctx = QconParser.FeedbackContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_feedback)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(QconParser.FEEDBACKMARKER)
            self.state = 173
            self.content()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





